<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.suffolk.jsimons3.randommath.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please"
        android:id="@+id/please"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/please"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusView"
            android:id="@+id/plusView"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minusView"
            android:id="@+id/minusView"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/minuseditText"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/minuseditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timesView"
            android:id="@+id/timesView"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/pluseditText"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/pluseditText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/timeseditText"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/timeseditText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitbutton"
            android:id="@+id/submitbutton"
            android:layout_row="3"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetbutton"
            android:id="@+id/resetbutton"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbercorrectView"
            android:id="@+id/numbercorrectView"
            android:layout_row="4"
            android:layout_column="0" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/starView1"
            android:layout_row="5"
            android:layout_column="0"
            android:visibility="invisible"
            android:src="@drawable/star" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/starView2"
            android:layout_row="5"
            android:layout_column="1"
            android:visibility="invisible"
            android:src="@drawable/star" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/starView3"
            android:layout_row="6"
            android:layout_column="0"
            android:visibility="invisible"
            android:src="@drawable/star" />

    </GridLayout>
</RelativeLayout>
